--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,6 @@
 @use 'sass:color'; 
 @use '../base/variables' as *;
+
 body {
-  font-family: $font-stack;
-  background-color: $primary-color;
-  color: color.scale(#fff, $lightness: -20%);
+  font-family: $primary-font;
 }
