--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,15 +1,6 @@
 @use "sass:math";
-@use "breakpoints" as *;
-
-$grid-columns: 12;
-
-$grid-gaps: (
-  "0": 0,
-  "1": 10px,
-  "2": 20px,
-  "3": 30px,
-);
-$layout-values: flex-start, flex-end, center, space-between, space-around;
+@use "../abstracts/mixins" as mixins;
+@use "../base/variables" as vars;
 
 // Base layout classes
 .container {
@@ -25,7 +16,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
 }
 
 // Grid gaps
-@each $key, $val in $grid-gaps {
+@each $key, $val in vars.$grid-gaps {
     .gap-#{$key} > * {
       padding: $val;
     }
@@ -36,59 +27,59 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
   }
   
   // Justify content classes
-  @each $val in $layout-values {
+  @each $val in vars.$layout-values {
     .justify-#{$val} {
       justify-content: $val;
     }
   }
 
-// Col classes  
-@include xs {
-  @for $i from 1 through $grid-columns {
+// Column classes  
+@include mixins.xs {
+  @for $i from 1 through vars.$grid-columns {
     .col-#{$i}-xs {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns); 
+      width: math.div($i * 100%, vars.$grid-columns); 
     }
   }
 }
 
-@include sm {
-  @for $i from 1 through $grid-columns {
+@include mixins.sm {
+  @for $i from 1 through vars.$grid-columns {
     .col-#{$i}-sm {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: math.div($i * 100%, vars.$grid-columns);
     }
   }
 }
 
-@include md {
-  @for $i from 1 through $grid-columns {
+@include mixins.md {
+  @for $i from 1 through vars.$grid-columns {
     .col-#{$i}-md {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: math.div($i * 100%, vars.$grid-columns);
     }
   }
 }
 
-@include lg {
-  @for $i from 1 through $grid-columns {
+@include mixins.lg {
+  @for $i from 1 through vars.$grid-columns {
     .col-#{$i}-lg {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: math.div($i * 100%, vars.$grid-columns);
     }
   }
 }
 
-@include xl {
-  @for $i from 1 through $grid-columns {
+@include mixins.xl {
+  @for $i from 1 through vars.$grid-columns {
     .col-#{$i}-xl {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: math.div($i * 100%, vars.$grid-columns);
     }
   }
 }
