--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,4 @@
-@use 'base/reset';
-@use 'base/variables';
-@use 'base/typography';
-@use 'layout/breakpoints';
-@use 'layout/header';
-@use 'layout/grid';
-@use 'components/buttons';
+@use 'base' as base;
+@use 'layout' as layout;
+@use 'components' as components;
+@use 'abstracts' as abstracts;
