--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,114 @@ body {
 
 body {
   font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+h1 {
+  font-size: 48px;
+  line-height: 58.51px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 48.76px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+
+h3 {
+  font-size: 28px;
+  line-height: 34.13px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+
+h4 {
+  font-size: 20px;
+  line-height: 24.38px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+}
+
+h2 {
+  letter-spacing: -0.02em;
+}
+
+.primary-text, .small-text, .large-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+.secondary-text, .title, .cta-text, .caption-text {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+}
+
+.large-text {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.small-text {
+  font-size: 14px;
+  line-height: 26px;
+}
+
+.caption-text {
+  font-size: 13px;
+  line-height: 15.23px;
+}
+
+.cta-text {
+  font-size: 14px;
+  line-height: 16.41px;
+  letter-spacing: 0.07em;
+}
+
+.title {
+  font-size: 12px;
+  line-height: 14.06px;
+  letter-spacing: 0.4em;
+}
+
+.text-dark-gray {
+  color: #212121;
+}
+
+.text-medium-gray {
+  color: #4E4E4E;
+}
+
+.text-light-gray {
+  color: #9CA3B5;
+}
+
+.text-purple {
+  color: #962AFA;
+}
+
+.text-bright-red {
+  color: #FA2A2A;
+}
+
+.text-bright-blue {
+  color: #5088FB;
+}
+
+.text-white {
+  color: #FFFFFF;
+}
+
+.text-light-teal {
+  color: #5CCFB3;
+}
+
+.text-dark-green {
+  color: #011F05;
 }
 
 .container {
@@ -399,14 +507,7 @@ body {
   }
 }
 header {
-  background-color: #f2a893;
   padding: 1rem;
-}
-header h1 {
-  font-size: 2rem;
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  color: black;
 }
 
 .button {
@@ -419,7 +520,7 @@ header h1 {
   transition: background-color 0.3s;
 }
 .button:hover {
-  background-color: #f2a893;
+  background-color: #212121;
   color: white;
 }
 
