--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ h2 {
   font-weight: 400;
 }
 
-.secondary-text, .title, .cta-text, .caption-text {
+.secondary-text, .title, .cta-text, .nav-item a, .caption-text, .dropdown-menu a {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
 }
@@ -74,12 +74,12 @@ h2 {
   line-height: 26px;
 }
 
-.caption-text {
+.caption-text, .dropdown-menu a {
   font-size: 13px;
   line-height: 15.23px;
 }
 
-.cta-text {
+.cta-text, .nav-item a {
   font-size: 14px;
   line-height: 16.41px;
   letter-spacing: 0.07em;
@@ -507,7 +507,97 @@ h2 {
   }
 }
 header {
-  padding: 1rem;
+  padding: 5px;
+  background-color: rgb(36, 34, 34);
+  height: 500px;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: flex-end;
+  margin-left: auto;
+}
+
+.nav-list {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-item {
+  position: relative;
+  margin-left: 12px;
+  padding: 10px 20px;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: #FFFFFF;
+  padding: 18px;
+}
+
+.nav-item:hover a {
+  border-bottom: 1px solid #FA2A2A;
+}
+
+/* Prevent border-bottom on hover for About Us */
+.nav-item.dropdown:hover a {
+  border-bottom: none;
+}
+
+/* Dropdown Styles */
+.dropdown-menu {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: auto;
+  right: 0;
+  background-color: #212121;
+  opacity: 0;
+  list-style-type: none;
+  width: 100%;
+  margin: 5px auto;
+  border: 1px solid #4E4E4E;
+  border-top: 1px solid #FA2A2A;
+  z-index: 10;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+}
+
+.dropdown-menu li {
+  padding: 15px 20px;
+  border-bottom: 2px solid #4E4E4E;
+}
+
+.dropdown-menu li:last-child {
+  border-bottom: none;
+}
+
+.dropdown-menu a {
+  display: block;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 0;
+}
+
+.dropdown-menu a:hover {
+  color: #9CA3B5;
+}
+
+/* Show the dropdown on hover */
+.nav-item.dropdown:hover .dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.hero {
+  min-height: 720px;
+  background-image: url("/img/bg-image.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .button {
