Header finished, Hero section started.
Heder is fully responsible, I just need to optimize code.
In hero section slider iz added and possitioning is setted up for now.

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,6 +1,7 @@
 @use "sass:map";
 @use "../base/variables" as vars;
 
+//Resposible design (GRID)
 @mixin xs {
   @media (min-width: map.get(vars.$breakpoints, "xs")) {
     @content;
@@ -36,3 +37,4 @@
     @content;
   }
 }
+
