Kakav sam bre doktor

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,6 +23,8 @@ h2 {
   letter-spacing: -0.02em;
 }
 
+//TODO: % koristi za extended i ispravi to svuda
+
 //Other text
 .primary-text {
   font-family: vars.$primary-font;
