--- a/css/main.css
+++ b/css/main.css
@@ -506,6 +506,20 @@ h2 {
     width: 100%;
   }
 }
+.button {
+  background-color: rgb(16, 243, 84);
+  color: #FFFFFF;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+.button:hover {
+  background-color: #212121;
+  color: white;
+}
+
 header {
   padding: 5px;
   position: absolute;
@@ -537,14 +551,12 @@ header {
   margin-left: 12px;
   padding: 10px 20px;
 }
-
 .nav-item a {
   text-decoration: none;
   color: #FFFFFF;
   padding: 18px;
 }
-
-.nav-item:hover a {
+.nav-item a:hover {
   border-bottom: 1px solid #FA2A2A;
 }
 
@@ -560,7 +572,6 @@ header {
   border: none;
   color: #FFFFFF;
 }
-
 .nav-button:hover {
   background-color: #FA2A2A;
   cursor: pointer;
@@ -672,7 +683,6 @@ header {
 .hero {
   position: relative;
   width: 100%;
-  padding: 80px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -684,6 +694,7 @@ header {
   color: white;
   padding: 20px;
   text-align: center;
+  position: absolute;
 }
 
 .hero-slider {
@@ -692,9 +703,6 @@ header {
   max-width: 100%;
   overflow: hidden;
   height: 720px;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .slider {
@@ -734,19 +742,6 @@ header {
     font-size: 1.2rem;
     padding: 8px;
   }
-}
-.button {
-  background-color: rgb(16, 243, 84);
-  color: #FFFFFF;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-.button:hover {
-  background-color: #212121;
-  color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
