About section and spacing
HTML and SCSS for about and spacing file for generating margines.

--- a/sass/base/_baseElements.scss
+++ b/sass/base/_baseElements.scss
@@ -1,7 +1,9 @@
-@use '../base/variables' as *;
+@use '../base/variables' as vars;
+@use '../base/colours' as colours;
 
 body{
-    background-color: $primary-color;
+    background-color: vars.$primary-color;
+    color: colours.$dark-gray;
 }
 
 .test{
