--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -34,8 +34,8 @@ $grid-columns: 12;
 $grid-gaps: (
   "0": 0,
   "1": 10px,
-  "2": 20px,
-  "3": 30px,
+  "2": 15px,
+  "3": 30x,
 );
 
 $layout-values: flex-start, flex-end, center, space-between, space-around;
