--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -4,7 +4,7 @@
 
     .bg-image{
         position: absolute;
-        left: 10%;
+        left: 18%;
         top: 0;
         z-index: -1;
     }
@@ -13,3 +13,4 @@
         width: 453px;
     }
 }
+//TODO: Sredi donju marginu, zeza position absolute
