--- a/css/main.css
+++ b/css/main.css
@@ -164,21 +164,21 @@ h2 {
 }
 
 .gap-2 > * {
-  padding: 20px;
+  padding: 15px;
 }
 
 .gap-2 {
-  margin-left: -20px;
-  margin-right: -20px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .gap-3 > * {
-  padding: 30px;
+  padding: 30x;
 }
 
 .gap-3 {
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -30x;
+  margin-right: -30x;
 }
 
 .justify-flex-start {
@@ -707,7 +707,6 @@ header {
   position: relative;
   max-width: 100%;
   overflow: hidden;
-  height: 720px;
 }
 
 .slider {
@@ -754,12 +753,30 @@ header {
 }
 .about .bg-image {
   position: absolute;
-  left: 10%;
+  left: 18%;
   top: 0;
   z-index: -1;
 }
 .about .text {
   width: 453px;
+}
+
+.featured {
+  background: linear-gradient(to right, #000000, rgba(0, 0, 0, 0)), url("/img/featured-image.png") center/cover no-repeat;
+}
+.featured .content {
+  margin: 150px 0 100px 0;
+  width: 550px;
+}
+
+.featured-attribute {
+  width: 165px;
+  border: 1px solid #9CA3B5;
+  background-color: rgba(255, 255, 255, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .m-none {
