--- a/sass/base/_colours.scss
+++ b/sass/base/_colours.scss
@@ -1,3 +1,4 @@
+$black: #000000;
 $dark-gray: #212121;
 $medium-gray: #4E4E4E;
 $light-gray: #9CA3B5;
@@ -7,3 +8,6 @@ $bright-blue: #5088FB;
 $white: #FFFFFF;
 $light-teal: #5CCFB3;
 $dark-green: #011F05;
+
+$white-a20: #FFFFFF33;
+$transparent-black: #00000000;
