--- a/sass/utilities/_spacings.scss
+++ b/sass/utilities/_spacings.scss
@@ -13,6 +13,10 @@ $spacings: (
   50: 50px,
   55: 55px,
   60: 60px,
+  65: 65px,
+  70: 70px,
+  75: 75px,
+  80: 80px,
 );
 
 // Generate Margin Classes
