--- a/sass/base/_colours.scss
+++ b/sass/base/_colours.scss
@@ -11,5 +11,6 @@ $dark-green: #011F05;
 
 $white-a20: #FFFFFF33;
 $transparent-black: #00000000;
+$light-gray-a10: #9CA3B51A;
 $light-gray-a20: #9CA3B533;
 $bright-red-a10: #FA2A2A1A;
