--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -1,16 +1,28 @@
 .about{
     margin: 105px 0;
-    position: relative;
+    
 
     .bg-image{
         position: absolute;
-        left: 18%;
-        top: 0;
+        left: 5vw;
+        top: -3vw;
+        height: 27vw;
+        width: 19vw;
         z-index: -1;
     }
 
     .text{
-        width: 453px;
+        width: 30rem;
     }
+
+    .image-wrapper{
+        position: relative;
+    }
+
+    .main-image{
+        width: 29vw;
+    }
+
+
 }
 //TODO: Sredi donju marginu, zeza position absolute
