--- a/css/main.css
+++ b/css/main.css
@@ -933,6 +933,63 @@ header {
   z-index: 999;
 }
 
+.contact-us {
+  background: url("/img/footer-bg.png") bottom left/contain no-repeat, linear-gradient(to left, #000000, #292929);
+  background-blend-mode: overlay;
+}
+.contact-us .content {
+  margin: 120px 0 0 150px;
+  width: 30vw;
+}
+.contact-us form {
+  padding: 30px;
+  margin-top: 120px;
+  width: 510px;
+  background: #011F05;
+}
+.contact-us form .input-wrapper {
+  position: relative;
+  margin: 30px;
+}
+.contact-us form .input-wrapper .message {
+  min-height: 150px;
+}
+.contact-us form input, .contact-us form textarea {
+  padding: 20px;
+  background: rgba(0, 191, 26, 0.3490196078);
+  border: 1px solid rgba(255, 255, 255, 0.1490196078);
+  min-height: 60px;
+  min-width: 360px;
+  color: #FFFFFF;
+}
+.contact-us form textarea {
+  resize: none; /* Disable resizing */
+  word-wrap: break-word; /* Ensure long words wrap properly */
+  white-space: pre-wrap;
+}
+.contact-us form textarea::placeholder, .contact-us form input::placeholder {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 14px;
+  color: #9CA3B5;
+}
+.contact-us form button {
+  border: 1px solid rgba(255, 255, 255, 0.1490196078);
+  background: transparent;
+  min-height: 50px;
+  min-width: 360px;
+  cursor: pointer;
+}
+
+footer {
+  background: linear-gradient(to left, #000000, #292929);
+  padding: 40px 60px;
+}
+footer .text-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+}
+
 .m-none {
   margin: 0;
 }
