--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,10 @@ body {
   color: #212121;
 }
 
-.test {
-  background-color: rgb(221, 250, 5);
-  height: 300px;
-  width: 100%;
-  border: 3px solid red;
+@media (max-width: 960px) {
+  .container {
+    text-align: center; /* Center text for all content */
+  }
 }
 
 * {
@@ -29,12 +28,62 @@ h1 {
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
 }
+@media (min-width: 0) {
+  h1 {
+    font-size: 32px;
+  }
+}
+@media (min-width: 480px) {
+  h1 {
+    font-size: 36px;
+  }
+}
+@media (min-width: 720px) {
+  h1 {
+    font-size: 42px;
+  }
+}
+@media (min-width: 960px) {
+  h1 {
+    font-size: 46px;
+  }
+}
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 48px;
+  }
+}
 
 h2 {
   font-size: 40px;
   line-height: 48.76px;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
+}
+@media (min-width: 0) {
+  h2 {
+    font-size: 24px;
+  }
+}
+@media (min-width: 480px) {
+  h2 {
+    font-size: 26px;
+  }
+}
+@media (min-width: 720px) {
+  h2 {
+    font-size: 30px;
+  }
+}
+@media (min-width: 960px) {
+  h2 {
+    font-size: 36px;
+  }
+}
+@media (min-width: 1200px) {
+  h2 {
+    font-size: 40px;
+  }
 }
 
 h3 {
@@ -43,6 +92,31 @@ h3 {
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
 }
+@media (min-width: 0) {
+  h3 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 480px) {
+  h3 {
+    font-size: 22px;
+  }
+}
+@media (min-width: 720px) {
+  h3 {
+    font-size: 24px;
+  }
+}
+@media (min-width: 960px) {
+  h3 {
+    font-size: 26px;
+  }
+}
+@media (min-width: 1200px) {
+  h3 {
+    font-size: 28px;
+  }
+}
 
 h4 {
   font-size: 20px;
@@ -50,17 +124,42 @@ h4 {
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
 }
+@media (min-width: 0) {
+  h4 {
+    font-size: 18px;
+  }
+}
+@media (min-width: 480px) {
+  h4 {
+    font-size: 19px;
+  }
+}
+@media (min-width: 720px) {
+  h4 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 960px) {
+  h4 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  h4 {
+    font-size: 20px;
+  }
+}
 
 h2 {
   letter-spacing: -0.02em;
 }
 
-.primary-text, .small-text, .large-text {
+.small-text, .large-text {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
 
-.secondary-text, .title, .cta-text, .nav-item a, .nav-button, .caption-text, .dropdown-menu a {
+.title, .cta-text, .nav-item a, .nav-button, .caption-text, .dropdown-menu a {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
 }
@@ -511,20 +610,6 @@ h2 {
     width: 100%;
   }
 }
-.button {
-  background-color: rgb(16, 243, 84);
-  color: #FFFFFF;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-.button:hover {
-  background-color: #212121;
-  color: white;
-}
-
 header {
   padding: 5px;
   position: absolute;
@@ -729,6 +814,15 @@ header {
   justify-content: space-between;
   transform: translateY(-50%);
 }
+.slider-controls button {
+  display: flex;
+  height: 50px;
+  width: 50px;
+  border-radius: 15px;
+  border: 0px;
+  background-color: #212121;
+  cursor: pointer;
+}
 
 /* Media Query for Smaller Screens */
 @media (max-width: 768px) {
@@ -748,7 +842,7 @@ header {
   }
 }
 .about {
-  margin: 105px 0;
+  margin: 6vw 0 10vw 0;
 }
 .about .bg-image {
   position: absolute;
@@ -758,14 +852,29 @@ header {
   width: 19vw;
   z-index: -1;
 }
+@media (max-width: 960px) {
+  .about .bg-image {
+    display: none;
+  }
+}
 .about .text {
-  width: 30rem;
+  width: 26vw;
+}
+@media (max-width: 960px) {
+  .about .text {
+    width: 90%;
+  }
 }
 .about .image-wrapper {
   position: relative;
 }
 .about .main-image {
   width: 29vw;
+}
+@media (max-width: 960px) {
+  .about .main-image {
+    width: 80%;
+  }
 }
 
 .featured {
@@ -941,10 +1050,16 @@ header {
   margin: 120px 0 0 150px;
   width: 30vw;
 }
+@media (max-width: 960px) {
+  .contact-us .content {
+    width: 100%;
+    margin: 50px 0 0 0px;
+  }
+}
 .contact-us form {
   padding: 30px;
   margin-top: 120px;
-  width: 510px;
+  width: 24vw;
   background: #011F05;
 }
 .contact-us form .input-wrapper {
@@ -978,6 +1093,11 @@ header {
   min-height: 50px;
   min-width: 360px;
   cursor: pointer;
+}
+@media (max-width: 960px) {
+  .contact-us form {
+    width: 100%;
+  }
 }
 
 footer {
