--- a/sass/sections/_contact-us.scss
+++ b/sass/sections/_contact-us.scss
@@ -12,12 +12,17 @@
     .content{
         margin: 120px 0 0 150px;
         width: 30vw;
+
+        @media (max-width: 960px) { // Adjust to your breakpoint
+          width:100%;
+          margin: 50px 0 0 0px;
+      }
     }
 
     form{
         padding: 30px;
         margin-top:120px;
-        width: 510px;
+        width: 24vw;
         background: colours.$dark-green;
         .input-wrapper {
             position: relative;
@@ -56,5 +61,9 @@
             min-width: 360px;
             cursor: pointer;
           }
+
+          @media (max-width: 960px) { // Adjust to your breakpoint
+            width:100%;
+        }
     }
 }
