--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,3 +1,5 @@
+@use '../base/colours' as colours;
+
 .hero {
   position: relative;
   width: 100%;
@@ -35,28 +37,23 @@
 }
 
 .slider-controls {
-  position: absolute;
+  position: absolute; 
   top: 50%;
   width: 100%;
   display: flex;
   justify-content: space-between;
   transform: translateY(-50%);
+
+  button{
+      display: flex;
+      height: 50px;
+      width: 50px;
+      border-radius: 15px;
+      border: 0px;
+      background-color: colours.$dark-gray;
+      cursor: pointer;
+  }
 }
-
-// button {
-//   background-color: rgba(0, 0, 0, 0.5);
-//   color: white;
-//   border: none;
-//   padding: 10px;
-//   cursor: pointer;
-//   font-size: 1.5rem;
-//   border-radius: 50%;
-//   transition: background-color 0.3s;
-// }
-
-// button:hover {
-//   background-color: rgba(0, 0, 0, 0.7);
-// }
 
 /* Media Query for Smaller Screens */
 @media (max-width: 768px) {
