--- a/css/main.css
+++ b/css/main.css
@@ -733,7 +733,7 @@ header {
 }
 
 /* Media Query for Mobile Screens */
-@media (max-width: 768px) {
+@media (max-width: 960px) {
   .logo {
     display: none;
   }
@@ -779,12 +779,19 @@ header {
 }
 
 .hero-content {
-  flex: 1;
+  position: absolute;
+  left: 10%;
+  top: 35%;
   max-width: 500px;
   color: white;
   padding: 20px;
-  text-align: center;
-  position: absolute;
+  text-align: left;
+  z-index: 1;
+}
+@media (max-width: 960px) {
+  .hero-content {
+    display: none;
+  }
 }
 
 .hero-slider {
@@ -1059,7 +1066,7 @@ header {
 .contact-us form {
   padding: 30px;
   margin-top: 120px;
-  width: 24vw;
+  width: 480px;
   background: #011F05;
 }
 .contact-us form .input-wrapper {
@@ -1076,6 +1083,12 @@ header {
   min-height: 60px;
   min-width: 360px;
   color: #FFFFFF;
+}
+@media (max-width: 960px) {
+  .contact-us form input, .contact-us form textarea {
+    min-width: 0;
+    width: 100%;
+  }
 }
 .contact-us form textarea {
   resize: none; /* Disable resizing */
@@ -1095,6 +1108,13 @@ header {
   cursor: pointer;
 }
 @media (max-width: 960px) {
+  .contact-us form button {
+    min-width: 0;
+    width: 90%;
+    margin: 0;
+  }
+}
+@media (max-width: 960px) {
   .contact-us form {
     width: 100%;
   }
@@ -1108,6 +1128,19 @@ footer .text-wrapper {
   display: flex;
   justify-content: flex-end;
   gap: 30px;
+}
+@media (max-width: 960px) {
+  footer .text-wrapper {
+    text-align: center;
+    flex-direction: column;
+    margin-top: 30px;
+    padding: 0;
+  }
+}
+@media (max-width: 960px) {
+  footer {
+    text-align: center;
+  }
 }
 
 .m-none {
