--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,4 +1,5 @@
 @use 'colours' as colours;
+@use "sass:map";
 
 // Colours
 $primary-color: colours.$white;
@@ -69,6 +70,8 @@ $breakpoints: (
   "lg": 960px,
   "xl": 1200px, 
 );
+$breakpoint-lg: map.get($breakpoints, "lg");
+$breakpoint-md: map.get($breakpoints, "md");
 
 $grid-columns: 12;
 
