--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -1,4 +1,6 @@
 @use '../base/colours' as colours;
+@use '../abstracts/mixins' as mixin;
+@use '../base/variables' as vars;
 
 .hero {
   position: relative;
@@ -9,12 +11,18 @@
 }
 
 .hero-content {
-  flex: 1;
+  position: absolute;
+  left: 10%;
+  top: 35%;
   max-width: 500px;
   color: white;
   padding: 20px;
-  text-align: center;
-  position: absolute;
+  text-align: left;
+  z-index: 1;
+
+  @include mixin.respond-to(vars.$breakpoint-lg) {
+    display: none;
+  }
 }
 
 .hero-slider {
